# Patterns

./: Cargo.toml  README.md
design_patterns/cqrs/: Cargo.toml
design_patterns/cqrs/src/: main.rs
design_patterns/dependency-injection/: Cargo.toml
design_patterns/dependency-injection/src/: main.rs
design_patterns/object-pool/: Cargo.toml
design_patterns/object-pool/src/: main.rs
design_patterns/private-class-data/: Cargo.toml
design_patterns/private-class-data/src/: main.rs
design_patterns/repository/: Cargo.toml
design_patterns/repository/src/: main.rs
design_patterns/specification/: Cargo.toml
design_patterns/specification/src/: main.rs
design_patterns/unit-of-works/: Cargo.toml
design_patterns/unit-of-works/examples/: uow-with-state.rs
design_patterns/unit-of-works/src/: main.rs
design_patterns_GoF/behavioral/chain-of-responsibility/: Cargo.toml
design_patterns_GoF/behavioral/chain-of-responsibility/examples/: chain_of_responsibility_ex1.rs  chain_of_responsibility_ex2.rs  main.rs
design_patterns_GoF/behavioral/chain-of-responsibility/src/: main.rs
design_patterns_GoF/behavioral/command/examples/: command_ex1.rs  command_ex2.rs  command_ex3.rs  ex1.rs  ex2.rs
design_patterns_GoF/behavioral/command/src/: main.rs  main_problem.rs
design_patterns_GoF/behavioral/interpreter/examples/: interpreter_ex1.rs
design_patterns_GoF/behavioral/interpreter/src/: main.rs
design_patterns_GoF/behavioral/iterator/src/: main.rs
design_patterns_GoF/behavioral/mediator/src/: main.rs
design_patterns_GoF/behavioral/memento/: Cargo.toml
design_patterns_GoF/behavioral/memento/src/: main.rs
design_patterns_GoF/behavioral/observer/examples/: main.rs  observer_ex1.rs
design_patterns_GoF/behavioral/observer/src/: main.rs
design_patterns_GoF/behavioral/state/src/: main.rs
design_patterns_GoF/behavioral/strategy/: Cargo.toml
design_patterns_GoF/behavioral/strategy/examples/: startegy_ex1.rs
design_patterns_GoF/behavioral/strategy/src/: main.rs
design_patterns_GoF/behavioral/template_method/: Cargo.toml
design_patterns_GoF/behavioral/template_method/examples/: template_method_ex1.rs
design_patterns_GoF/behavioral/template_method/src/: main.rs
design_patterns_GoF/behavioral/visitor/: Cargo.toml
design_patterns_GoF/behavioral/visitor/examples/: main.rs  visitor_ex1.rs  visitor_ex2.rs
design_patterns_GoF/behavioral/visitor/src/: main.rs
design_patterns_GoF/creational/abstract_factory/: Cargo.toml
design_patterns_GoF/creational/abstract_factory/src/: main.rs
design_patterns_GoF/creational/builder/examples/: builder_ex1.rs
design_patterns_GoF/creational/builder/src/: main.rs
design_patterns_GoF/creational/fabric_method/: Cargo.toml
design_patterns_GoF/creational/fabric_method/examples/: ex1.rs  ex2.rs  fabric_method_ex1.rs  fabric_method_ex2.rs  fabric_method_ex3.rs
design_patterns_GoF/creational/fabric_method/src/: main.rs
design_patterns_GoF/creational/fold/: Cargo.toml
design_patterns_GoF/creational/fold/src/: main.rs
design_patterns_GoF/creational/prototype/src/: main.rs
design_patterns_GoF/creational/simple-factory/: Cargo.toml
design_patterns_GoF/creational/singleton/: Cargo.toml
design_patterns_GoF/creational/singleton/examples/: atomics.rs  const_mutex.rs  lazy_static.rs  once_cell.rs  singleton_atomics.rs  singleton_const_mutex.rs  singleton_lazy_static.rs  singleton_once_cell.rs
design_patterns_GoF/creational/singleton/src/: main.rs
design_patterns_GoF/structural/adapter/: Cargo.toml
design_patterns_GoF/structural/adapter/examples/: adapter_ex1.rs
design_patterns_GoF/structural/adapter/src/: main.rs
design_patterns_GoF/structural/bridge/examples/: bridge_ex1.rs  bridge_ex2.rs  main.rs
design_patterns_GoF/structural/bridge/src/: main.rs
design_patterns_GoF/structural/composite/examples/: composite_ex1.rs
design_patterns_GoF/structural/composite/src/: main.rs
design_patterns_GoF/structural/decorator/examples/: decorator_ex1.rs  decorator_ex2.rs  main.rs
design_patterns_GoF/structural/decorator/src/: main.rs
design_patterns_GoF/structural/facade/examples/: facade_ex1.rs
design_patterns_GoF/structural/facade/src/: main.rs
design_patterns_GoF/structural/flyweight/: Cargo.toml
design_patterns_GoF/structural/flyweight/examples/: flyweight_ex1.rs
design_patterns_GoF/structural/flyweight/src/: main.rs
design_patterns_GoF/structural/proxy/examples/: proxy_ex1.rs
design_patterns_GoF/structural/proxy/src/: main.rs
design_principles/SOLID/: README.md
idioms/1.Type_safety/: README.md
idioms/1.Type_safety/1.2.Typestates/: 1.2.3.typestates.rs  1.2.5.typestates.rs
idioms/2.Mem_replace/: README.md
idioms/3.Bound_impl/: README.md
idioms/6.Sealing/: README.md
src/: main.rs
src/anti_patterns/: README.md
src/design_patterns/behavior/chain_of_responsibility/src/: main.rs
src/design_patterns/behavior/command/examples/: ex2.rs
src/design_patterns/behavior/interpreter/src/: main.rs
src/design_patterns/behavior/iterator/src/: main.rs
src/design_patterns/behavior/mediator/: Cargo.toml
src/design_patterns/behavior/mediator/src/: main.rs
src/design_patterns/behavior/memento/src/: main.rs
src/design_patterns/behavior/visitor/examples/: main.rs
src/design_patterns/creational/builder/: Cargo.toml
src/design_patterns/structural/composite/: Cargo.toml
src/design_principles/: README.md
src/idioms/: README.md
src/idioms/1.Type_safety/: README.md
src/idioms/1.Type_safety/1.1.Newtype/: newtype.rs
src/idioms/1.Type_safety/1.2.Typestates/: 1.2.1.typestates.rs  1.2.2.typestates.rs  1.2.3.typestates.rs  1.2.4.typestates.rs  1.2.5.typestates.rs
src/idioms/2.Mem_replace/: mem_replace.rs
src/idioms/3.Bound_impl/: bound_impl.rs
src/idioms/4.Generic_in_type_out/: README.md
src/idioms/5.Exhaustivity/: README.md
src/patterns/behavior/chain_of_responsibility/: Cargo.toml
src/patterns/behavior/interpreter/: Cargo.toml
src/patterns/creational/prototype/: Cargo.toml
src/patterns/structural/decorator/: Cargo.toml
src/patterns/structural/proxy/: Cargo.toml
(+34 files in other folders)
