[package]
name = "Patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "type_safety_typestate_1"
path ="src/idioms/1.Type_safety/1.2.Typestates/1.2.1.typestates.rs"

[[example]]
name = "type_safety_typestate_2"
path ="src/idioms/1.Type_safety/1.2.Typestates/1.2.2.typestates.rs"

[[example]]
name = "type_safety_typestate_3"
path ="src/idioms/1.Type_safety/1.2.Typestates/1.2.3.typestates.rs"

[[example]]
name = "type_safety_typestate_4"
path ="src/idioms/1.Type_safety/1.2.Typestates/1.2.4.typestates.rs"

[[example]]
name = "type_safety_typestate_5"
path ="src/idioms/1.Type_safety/1.2.Typestates/1.2.5.typestates.rs"

[[example]]
name = "mem_replace"
path ="src/idioms/2.Mem_replace/mem_replace.rs"

[[example]]
name = "p_behavior_command"
path ="src/patterns/behavior/command/src/main.rs"

[[example]]
name = "p_behavior_interpreter"
path ="src/patterns/behavior/interpreter/src/main.rs"

[[example]]
name = "p_behavior_strategy"
path ="src/patterns/behavior/strategy/src/main.rs"

[[example]]
name = "p_behavior_visitor"
path ="src/patterns/behavior/visitor/src/main.rs"

[[example]]
name = "p_creational_builder"
path ="src/patterns/creational/builder/src/main.rs"

[[example]]
name = "p_creational_fold"
path ="src/patterns/creational/fold/src/main.rs"

[[example]]
name = "p_structural_adapter"
path ="src/patterns/structural/adapter/src/main.rs"

[[example]]
name = "p_structural_bridge"
path ="src/patterns/structural/bridge/src/main.rs"

[[example]]
name = "p_structural_decorator"
path ="src/patterns/structural/decorator/src/main.rs"

[[example]]
name = "p_structural_facade"
path ="src/patterns/structural/facade/src/main.rs"

[dependencies]
futures = "0.3"
tokio =  { version = "1.12", features = ["full"] }