[workspace]

members = [
  "design_patterns_GoF/behavioral/chain-of-responsibility",
  "design_patterns_GoF/behavioral/command",
  "design_patterns_GoF/behavioral/interpreter",
  "design_patterns_GoF/behavioral/iterator",
  "design_patterns_GoF/behavioral/mediator",
  "design_patterns_GoF/behavioral/memento",
  "design_patterns_GoF/behavioral/observer",
  "design_patterns_GoF/behavioral/state",
  "design_patterns_GoF/behavioral/strategy",
  "design_patterns_GoF/behavioral/template_method",
  "design_patterns_GoF/behavioral/visitor",

  "design_patterns_GoF/creational/builder",
  "design_patterns_GoF/creational/fabric_method",
  "design_patterns_GoF/creational/abstract_factory",
  "design_patterns_GoF/creational/fold",
  "design_patterns_GoF/creational/prototype",
  "design_patterns_GoF/creational/singleton",

  "design_patterns_GoF/structural/adapter",
  "design_patterns_GoF/structural/bridge",
  "design_patterns_GoF/structural/composite",
  "design_patterns_GoF/structural/decorator",
  "design_patterns_GoF/structural/facade",
  "design_patterns_GoF/structural/flyweight",
  "design_patterns_GoF/structural/proxy",

  "design_patterns/private-class-data",
  "design_patterns/object-pool",
  "design_patterns/specification",
  "design_patterns/repository",
  "design_patterns/unit-of-works",
]
